# game-asset-helper

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  HANDOFF.md  LICENSE  README.md  babel.cfg  pyproject.toml
.github/: AGENTS.md
.github/workflows/: AGENTS.md  publish.yml
assets/: AGENTS.md
docs/: AGENTS.md  M5_PR_BODY.md  M5_PR_DESCRIPTION_DRAFT.md  MCP_USAGE_GUIDE.md  RELEASE_NOTES_v0.0.1.md  SETUP.md  WEB_UI_GUIDE.md
docs/superpowers/: AGENTS.md
docs/superpowers/plans/: 2026-05-19-m9-code-signing-and-auto-update.md  2026-05-20-backend-help-cards.md  2026-05-20-gemini-batch-api.md  2026-05-20-m11-multi-backend-llm.md  AGENTS.md
docs/superpowers/specs/: 2026-05-17-m5-web-gui-and-library-redesign.md  2026-05-17-mcp-search-success-rate-design.md  2026-05-18-m6-sheet-and-animation-design.md  2026-05-18-m7-unity-asset-store-import-design.md  2026-05-19-m10-pypi-and-rename-design.md  2026-05-19-m8-packaging-and-i18n-design.md  2026-05-20-backend-help-cards-design.md  2026-05-20-gemini-batch-api-design.md  2026-05-20-m11-multi-backend-llm-design.md  2026-05-20-roadmap-design.md  2026-05-21-m11-2-batch-spritesheet-modality.md  2026-05-21-m11-3-detection-cache.md  2026-05-21-m11-5-live-validation-and-tuning.md  2026-05-22-m11-6-spritesheet-palette-and-other-cleanup.md  2026-05-22-m11-7-mood-noise-cleanup.md  2026-05-22-m11-8-mood-seed-disable.md  2026-05-23-m11-11-2d-grid-sheet-detection.md  AGENTS.md
milestones/: AGENTS.md  HISTORY.md  M0_plan.md  M0_todo.md  M0_verification.md  M10_todo.md  M10_verification.md  M11_10_verification.md  M11_11_plan.md  M11_1_plan.md  M11_1_todo.md  M11_1_verification.md  M11_3_plan.md  M11_3_verification.md  M11_4_verification.md  M11_5_plan.md  M11_5_verification.md  M11_6_plan.md  M11_6_verification.md  M11_7_plan.md  M11_7_verification.md  M11_8_plan.md  M11_8_verification.md  M11_9_plan.md  M11_9_todo.md  M11_9_verification.md  M11_plan.md  M11_todo.md  M11_verification.md  M1_plan.md  M1_todo.md  M1_verification.md  M2.1_plan.md  M2.1_todo.md  M2.1_verification.md  M2_verification.md  M3_plan.md  M3_todo.md  M3_verification.md  M4_verification.md  (+13 more)
pytest-cache-files-guug55qb/v/cache/: nodeids
scripts/: AGENTS.md  _diag_labels.py  _diag_m11_10.py  _diag_sheet_missed.py  _diag_sheets.py  generate_tray_ico.py  launch-tray-test.ps1
src/: AGENTS.md
src/assetcache/: AGENTS.md  __init__.py  __main__.py  app.py  config.py  logging_setup.py  tray.py
src/assetcache/core/: AGENTS.md  __init__.py  analysis_queue.py  embedding.py  labels.py  migration.py  search.py  store.py  thumbnails.py  watcher.py
src/assetcache/core/analyzer/: AGENTS.md  base.py  messages.py  payload_parser.py  sound.py  sprite.py  spritesheet.py  spritesheet_meta.py  tech_meta.py
src/assetcache/core/batch/: AGENTS.md  __init__.py  manager.py  poller.py  sheet_classifier.py  types.py
src/assetcache/core/llm/: AGENTS.md  __init__.py  base.py  chain.py  registry.py
src/assetcache/core/sheet/: AGENTS.md  detect.py  grid_detect.py
src/assetcache/core/unity_import/: AGENTS.md
src/assetcache/core/updater/: AGENTS.md  pip_command.py  version.py
src/assetcache/mcp/: AGENTS.md  server.py  tools.py
src/assetcache/platform/: AGENTS.md  autostart.py
src/assetcache/web/: AGENTS.md  app.py  deps.py  locale_middleware.py  pending.py  server.py  sse_bus.py  url.py
src/assetcache/web/locale/: AGENTS.md  messages.pot
src/assetcache/web/routers/: AGENTS.md  analyzing.py  library.py  migration.py  settings.py  updates.py
src/assetcache/web/static/: AGENTS.md
src/gah/: __init__.py  __main__.py  app.py  config.py  logging_setup.py  tray.py
src/gah/core/: __init__.py  analysis_queue.py  asset_kind.py  clip_labeler.py  consistency.py  embedding.py  label_query.py  labels.py  manifest.py  ollama_client.py  pack_manager.py  scanner.py  search.py  searchable.py  store.py  suggest_packs.py  thumbnails.py  usage_tracker.py  watcher.py
src/gah/mcp/: __init__.py  models.py  server.py  tools.py
src/gah/platform/: autostart.py  single_instance.py
src/gah/ui/: __init__.py  filter_bar.py  label_chip_panel.py  library_view.py  main_window.py  pack_view.py  search_side_panel.py
src/gah/web/: __init__.py  app.py  deps.py  i18n.py  locale_middleware.py  pending.py  server.py  sse_bus.py  tray_bridge.py  url.py
tests/: AGENTS.md  conftest.py  test_analysis_queue.py  test_analysis_queue_backend_hook.py  test_analysis_queue_batch_hook.py  test_analyzer_backend_used.py  test_analyzer_messages.py  test_analyzer_payload_parser.py  test_analyzer_sprite_inventory_classification.py  test_analyzer_spritesheet.py  test_analyzer_spritesheet_meta.py  test_analyzer_tech_meta.py  test_app_m5.py  test_app_unity_boot_scan.py  test_asset_kind.py  test_autostart.py  test_backend_info_setup_url.py  test_batch_end_to_end.py  test_batch_image_prompt_inventory_item.py  test_batch_manager.py  test_batch_manager_detection_cache.py  test_batch_poller.py  test_batch_poller_label_parsing.py  test_batch_poller_meta_filling.py  test_batch_poller_sprite_meta_cache.py  test_batch_poller_spritesheet.py  test_batch_poller_spritesheet_modality.py  test_batch_sheet_classifier.py  test_batch_types.py  test_cli_migrate.py  test_clip_labeler_concurrency.py  test_config.py  test_config_batch.py  test_config_m11_migration.py  test_config_m2.py  test_config_m2_1.py  test_config_m3.py  test_config_m5.py  test_config_m8.py  test_consistency.py  (+134 more)
tests/e2e/: AGENTS.md  conftest.py  test_e2e_labels_admin.py  test_e2e_library.py  test_e2e_other_pages.py  test_e2e_packs.py  test_e2e_smoke.py
tests/fixtures/: AGENTS.md
tests/fixtures/sheets/: hero_walk_aseprite_array.json  hero_walk_aseprite_hash.json  icons_texturepacker.json
tests/fixtures/unity/: make_unitypackage.py
tools/: AGENTS.md  inspect_m6.py  setup_m6_test.py
(+111 files in other folders)
