[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assetcache-mcp"
version = "0.1.2"
description = "MCP server + tray app for indexing and retrieving 2D sprites, sheets, sounds, and Unity packages via natural language."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "v0o0v", email = "v0o0v2@gmail.com" }]
keywords = ["mcp", "unity", "asset", "game-development", "claude"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "PySide6>=6.6",
  "portalocker>=2.8",
  "tomli_w>=1.0",
  "tomli>=2.0; python_version<'3.11'",
  "platformdirs>=4.2",
  "watchdog>=4.0",
  # M2: 분석 파이프라인
  "Pillow>=10",
  "numpy>=1.26",
  "librosa>=0.10",
  "soundfile>=0.12",
  "httpx>=0.27",
  "pydantic>=2.6",
  "open_clip_torch>=2.24",
  "torch>=2.2",
  "matplotlib>=3.8",
  # M3: 검색 백엔드 + MCP stdio 서버
  "mcp>=1.27,<2",
  # M5: 웹 GUI (FastAPI + HTMX + Alpine)
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "sse-starlette>=2",
  # M8: i18n 백엔드
  "Babel>=2.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.12",
  # M2: HTTP 모킹 + 비동기 테스트
  "pytest-asyncio>=0.23",
  "respx>=0.20",
  # M5 Phase 6+: Playwright e2e 브라우저 자동화
  "pytest-playwright>=0.4",
  # M8: PyInstaller 단일 exe 빌드 (사용자 dev only)
  "pyinstaller>=6",
  # M10: PyPI 빌드 + 업로드
  "build",
  "twine",
]

[project.scripts]
assetcache = "assetcache.__main__:main"
assetcache-mcp = "assetcache.__main__:main_mcp"

[project.urls]
Homepage = "https://github.com/v0o0v/assetcache-mcp"
Issues = "https://github.com/v0o0v/assetcache-mcp/issues"
Documentation = "https://github.com/v0o0v/assetcache-mcp/blob/main/README.md"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
"assetcache.web" = [
  "templates/**/*.html",
  "static/**/*",
  "locale/**/*.mo",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -m 'not clip_integration and not mcp_integration and not e2e'"
markers = [
  "clip_integration: 실제 CLIP 모델 다운로드(~600 MB) 필요. 기본 실행에서 제외 — `pytest -m clip_integration` 으로 옵트인.",
  "mcp_integration: 실제 MCP stdio subprocess 기동 필요(`python -m assetcache --mcp`). 기본 실행에서 제외 — `pytest -m mcp_integration` 으로 옵트인.",
  "e2e: Playwright 헤드리스 Chromium 필요. 기본 실행에서 제외 — `pytest -m e2e` 으로 옵트인.",
]
filterwarnings = [
  "ignore::DeprecationWarning",
]
